# fastapi-rest-framework

./: .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt  setup.cfg
example/: __main__.py  app.py  config.py
fastapi_rest_framework/: cli.py  config.py  errors.py  logging.py  parsers.py  responses.py  router.py  schemas.py
