[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool]

[tool.poetry]
authors = ["tc-imba <liuyh970615@gmail.com>"]
description = ""
license = "MIT"
name = "fastapi-rest-framework"
readme = "README.md"
version = "0.0.1"

[tool.poetry.dependencies]
click = "^7.1.2"
click-option-group = "^0.5.3"
fastapi = {version = "^0.70.0", optional = true}
loguru = "^0.5.3"
makefun = "^1.11.3"
psutil = "^5.8.0"
pydantic = {extras = ["dotenv"], version = "^1.8.2"}
python = "^3.7"

[tool.poetry.dev-dependencies]
pre-commit = "^2.14.0"
pytest = "^6.2.4"
python-semantic-release = "^7.19.1"

[tool.poetry.extras]
fastapi = [
    "fastapi"
]

[tool.semantic_release]
branch = "master"
build_command = "pip install poetry && poetry build"
upload_to_pypi = false
upload_to_release = false
version_variable = ["fastapi_rest_framework/__init__.py:__version__", "pyproject.toml:version"]
