[metadata]
name = fastapi-rest-framework
version = 0.0.1
description-file = README.md
description-content-type = text/markdown; charset=UTF-8
license = MIT

[files]
packages =
    fastapi_rest_framework

[extras]
dev =
    pre-commit>=2.10.1
    pytest>=6.2.2
example =
    fastapi[all]

[flake8]
per-file-ignores = __init__.py:F401
max-line-length = 131
ignore = E203,E402,W503

[mypy]
plugins = pydantic.mypy

follow_imports = silent
warn_redundant_casts = True
warn_unused_ignores = True
disallow_any_generics = True
check_untyped_defs = True
no_implicit_reexport = True

# for strict mypy: (this is the tricky one :-))
disallow_untyped_defs = True

[pydantic-mypy]
init_forbid_extra = True
init_typed = True
warn_required_dynamic_aliases = True
warn_untyped_fields = True
